--- a/styles.css
+++ b/styles.css
@@ -41,11 +41,12 @@ main .background_text {
   margin-right: 30px;
   font-size: 20px;
   color: #fff;
+  text-shadow: 1px 1px #000;
 }
 
 main .background_text p {
   padding: 0;
-  margin: 0px;
+  margin: 0;
 }
 
 main .text_position {
@@ -71,7 +72,6 @@ main .text_resume {
   width: 700px;
   text-shadow: 1px 1px #000;
   padding: 0;
-  margin: 0;
   margin-bottom: 10px;
 }
 
@@ -81,9 +81,20 @@ main .resume p {
   font-size: 20px;
   text-shadow: 1px 1px #000;
   width: 700px;
-  margin: 0;
   padding: 0;
   margin-top: 10px;
+  margin-bottom: 0;
+}
+
+main #text_link {
+  text-align: center;
+  color: #fff;
+  font-size: 18px;
+  text-shadow: 1px 1px #000;
+  width: 700px;
+  padding: 0;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 main .resume a {
@@ -91,7 +102,6 @@ main .resume a {
   font-size: 18px;
   font-weight: bold;
   padding: 0;
-  margin: 0;
   margin-top: 10px;
   margin-bottom: 10px;
 }
@@ -143,6 +153,7 @@ section .image img {
   width: 250px;
   height: 250px;
   margin-left: 20px;
+  border: 3px solid #000;
 }
 
 section .block_2 {
@@ -151,7 +162,6 @@ section .block_2 {
   margin-top: 50px;
   margin-bottom: 50px;
   padding: 0;
-  margin: 0;
 }
 
 section .image_2 img {
@@ -173,4 +183,32 @@ section a {
 
 section a:hover {
   color: #38B6FF;
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #1B1F23;
+}
+
+footer .text_footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+footer .text_footer img {
+  object-fit: cover;
+  width: 100px;
+  height: 100px;
+}
+
+footer p {
+  text-align: center;
+  color: #fff;
+  font-size: 20px;
+  padding: 0;
+  margin-top: 0;
+  margin-bottom: 20px;
 }
