--- a/styles.css
+++ b/styles.css
@@ -213,3 +213,143 @@ footer p {
   margin-top: 5px;
   margin-bottom: 20px;
 }
+
+@media(max-width: 1046px) {
+  section .block_1 {
+    height: auto;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  section .text {
+    margin: 0;
+  }
+
+  section .text h1 {
+    margin-bottom: 10px;
+  }
+
+  section .text p {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  section .image {
+    width: 250px;
+    height: 250px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  section .image img {
+    margin: 0;
+  }
+
+  section .block_2 {
+    height: auto;
+    flex-direction: column-reverse;
+    align-items: center;
+    margin: 0;
+  }
+}
+
+@media(max-width: 730px) {
+  header .name h1 {
+    font-size: 40px;
+  }
+
+  main .background_img {
+    justify-content: center;
+    align-items: flex-end;
+  }
+
+  main .background_text {
+    font-size: 18px;
+    margin-right: 0;
+    margin-bottom: 75px;
+  }
+
+  main .text_resume {
+    width: 463.76px;
+    font-size: 18px;
+  }
+
+  main #text_link {
+    width: 463.76px;
+    font-size: 16px;
+  }
+
+  main .resume p {
+    width: 463.76px;
+    font-size: 18px;
+  }
+
+  section .text h1 {
+    display: flex;
+    justify-content: center;
+    width: 463.76px;
+    font-size: 22px;
+  }
+
+  section .text p {
+    width: 463.76px;
+    font-size: 18px;
+  }
+
+  section a {
+    font-size: 16px;
+  }
+
+  footer p {
+    font-size: 18px;
+  }
+}
+
+@media(max-width: 490px) {
+  header .name h1 {
+    font-size: 38px;
+  }
+
+  main .background_text {
+    font-size: 16px;
+  }
+
+  main .text_resume {
+    width: 373px;
+    font-size: 16px;
+  }
+
+  main #text_link {
+    width: 373px;
+    font-size: 14px;
+  }
+
+  main .resume p {
+    width: 373px;
+    font-size: 16px;
+  }
+
+  section .text h1 {
+    width: 373px;
+    font-size: 20px;
+  }
+
+  section .text p {
+    width: 373px;
+    font-size: 16px;
+  }
+
+  section a {
+    font-size: 14px;
+  }
+
+  footer .text_footer img,
+  #link_github {
+    width: 50px;
+    height: 50px;
+  }
+
+  footer p {
+    font-size: 16px;
+  }
+}
